--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,10 @@ deploy:
   skip_cleanup: true
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep_history: true
-  local_dir: dist
   on:
     branch: master
-script: travis_wait 10 npm run build
+script: npm run build
 before_install:
 - npm install -g npm
 - npm install ol
 - npm install --save-dev webpack
-- npm install
